# sway_launchpad

./: .gitignore  Cargo.toml  Requirements.md
launchpad_sway_controler/: Cargo.toml
launchpad_sway_controler/src/: main.rs
launchpad_sway_controler/src/mappings/: mod.rs
launchpad_sway_controler/src/plugin_actions/: mod.rs
launchpad_sway_controler/src/sway/: mod.rs
launchpad_sway_controler/src/utils/: globals.rs  mod.rs  numbers.rs
launchpad_sway_controler_macros/: Cargo.toml
launchpad_sway_controler_macros/src/: lib.rs
lsc_example_plugin/: Cargo.toml
lsc_example_plugin/src/: main.rs
lsc_matrix_presets/: Cargo.toml
lsc_matrix_presets/src/: config.rs  main.rs
src/: main.rs
src/sway/: mod.rs
