[package]
name = "launchpad_sway_controler"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7"
swayipc-async = "2.0.0-alpha"
tokio = { version = "0.3.2", features = ["full"] }
futures-util = "0.3.7"
color-eyre = "0.5"
alsa = "0.4.3"
strum = { version = "0.20", features = ["derive"] }

[profile.dev.package.backtrace]
opt-level = 3