[package]
name = "launchpad_sway_controler"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7"
swayipc-async = "2.0.0-alpha.1"
tokio = { version = "0.2", features = ["full"] } #TODO Update blocked by thirtyfour
futures-util = "0.3.7"
color-eyre = "0.5"
alsa = "0.4.3"
strum = { version = "0.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
thirtyfour = "0.21"
once_cell = "1.4.1"