[package]
name = "lsc_example_plugin"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "0.3.2", features = ["full"] }
futures-util = "0.3.7"
color-eyre = "0.5"
users = "0.11.0"