[package]
name = "lsc_matrix_presets"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
matrix-sdk-common-macros = {git = "https://github.com/matrix-org/matrix-rust-sdk.git", rev = "8f99180c99ccd74803565fb36098389198091ded"}
url = "2.1.1"
async-trait = "0.1.41"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.7"
color-eyre = "0.5"
once_cell = "1.5.2"
users = "0.11.0"
serde = "1.0"
serde_yaml = "0.8.13"
